--- a/cadastro_candidato.html
+++ b/cadastro_candidato.html
@@ -20,10 +20,10 @@
         <label for="cpf">CPF:</label>
         <input type="text" id="cpf" name="cpf" required><br><br>
 
-        <label for="zona">Zona:</label>
-        <input type="text" id="zona" name="zona" required><br><br>
+        <label for="idade">idade:</label>
+        <input type="number" id="idade" name="idade" required><br><br>
 
-        <button type="submit">Cadastrar Eleitor</button>
+        <button type="submit">Cadastrar Candidato</button>
     </form>
 </body>
 </html>
