--- a/cadastro_candidato.html
+++ b/cadastro_candidato.html
@@ -11,8 +11,8 @@
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required><br><br>
 
-        <label for="Partido">Data de Nascimento:</label>
-        <input type="date" id="data_nascimento" name="data_nascimento" required><br><br>
+        <label for="Partido">Partido:</label>
+        <input type="text" id="partido" name="partido" required><br><br>
 
         <label for="endereco">Endereço:</label>
         <input type="text" id="endereco" name="endereco" required><br><br>
